# cie

./: .clangd  .gitignore  CMakeLists.txt  Config.cmake.in  build.sh  mkdocs.sh  readme  readme.md
.github/workflows/: github-actions.yml
cmake/: .gitignore  find_homebrew_dependency.sh  homebrew_llvm_toolchain.cmake
executables/: .gitignore  build.sh
executables/bad_apple/: CMakeLists.txt  build.sh
executables/bad_apple/.github/workflows/: github-actions.yml
executables/bad_apple/src/: bad_apple.cpp
executables/benchmarks/: CMakeLists.txt  Config.cmake.in  build.sh
executables/benchmarks/src/: ansatzspace.cpp  main.cpp  spacetree.cpp
executables/fem_examples/: CMakeLists.txt
executables/fem_examples/src/: poisson2D.cpp
executables/fem_examples/src/embeddedPoisson2D/: BoundaryData.cpp  BoundaryData.hpp  CellData.cpp  CellData.hpp  MeshData.cpp  MeshData.hpp  config.json  config_applied.json  configuration.cpp  configuration.hpp  constraints.cpp  constraints.hpp  definitions.hpp  integration.cpp  integration.hpp  main.cpp  mesh.cpp  mesh.hpp  mkinput.py  postprocessing.cpp  postprocessing.hpp  solver.cpp  solver.hpp
executables/fem_examples/src/poisson2D/: BoundaryData.cpp  BoundaryData.hpp  CellData.cpp  CellData.hpp  MeshData.cpp  MeshData.hpp  constraints.cpp  constraints.hpp  definitions.hpp  integration.cpp  integration.hpp  main.cpp  mesh.cpp  mesh.hpp  postprocessing.cpp  postprocessing.hpp  solver.cpp  solver.hpp  xdmf.hpp
executables/geo_examples/: .gitignore  CMakeLists.txt  Config.cmake.in
executables/geo_examples/src/pts2stl/: main.cpp
libraries/: .gitignore  build.sh
libraries/ciegl/: CMakeLists.txt
libraries/ciegl/.github/workflows/: github-actions.yml
libraries/ciegl/docs/: doxyfile
libraries/cieutils/: CMakeLists.txt  build.sh
libraries/cieutils/.github/workflows/: github-actions.yml
libraries/cieutils/inc/: cmake_variables.hpp  version.hpp
libraries/cieutils/python/bindings/inc/: common.hpp
libraries/cieutils/python/bindings/src/: version.cpp
libraries/cieutils/src/: cmake_variables.cpp.in
libraries/fem/: CMakeLists.txt  Config.cmake.in
libraries/fem/.github/workflows/: github-actions.yml
libraries/fem/data/schemas/cie/fem/: cartesian-grid-2d.json  dirichlet-condition-1d.json  discretization.json  embedded-domain.json  functional-discretization.json  gauss-legendre-quadrature.json  geometric-discretization.json  integrand-processor.json  integration.json  kd-tree-quadrature.json  linear-solver.json  linear-system.json  path.json  pmg-sycl.json  pmg.json  postprocessing.json  uniform-cartesian-grid.json
libraries/fem/python/bindings/: maths.cpp
libraries/fem/python/scripts/: plotSystemTest.py
libraries/fem/test/: test_1d.cpp  test_2d.cpp  test_2d.pvsm  test_3d.cxx
libraries/geo/: CMakeLists.txt  Config.cmake.in  build.sh
libraries/geo/.github/workflows/: github-actions.yml
libraries/geo/python/bindings/: python_geo.cpp  trees.cpp
libraries/linalg/: CMakeLists.txt  Config.cmake.in
libraries/linalg/.github/workflows/: github-actions.yml
libraries/linalg/data/schemas/cie/linalg/: cg-sycl.json  cg.json  inverse-diagonal-operator-sycl.json  inverse-diagonal-operator.json  jacobi-sycl.json  jacobi.json
libraries/linalg/data/schemas/cie/linalg/base/: cg.json  iterative-solver.json  jacobi.json
scripts/: .gitignore  bad_apple.sh
src/: bad_apple.cpp
